<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E4E7"
    tools:context=".ui.neighbour_list.UserProfilActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="421dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/avatarname"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="453dp"
        android:textColor="@android:color/white"
        android:textSize="24dp"
        android:text="Username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="334dp"
        android:layout_marginBottom="343dp"
        android:background="@color/cardview_light_background"
        android:text="Username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="289dp"
        android:background="@color/cardview_light_background"
        android:text="Adresse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="235dp"
        android:background="@color/cardview_light_background"
        android:text="Phone Number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/url"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="181dp"
        android:background="@color/cardview_light_background"
        android:text="Website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutMe"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="562dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="29dp"
        android:background="@color/cardview_light_background"
        android:text="About User"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="62dp"
        android:layout_height="59dp"
        android:layout_marginStart="343dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="390dp"
        android:background="@drawable/ic_star_border_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="347dp"
        android:layout_marginBottom="672dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>